Builds up to spring-shell, merging main back in now